--- a/content/HW.html
+++ b/content/HW.html
@@ -131,7 +131,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='Brython.html'>Brython</a><li><a href='w6.html'>w6</a></li>
+                     <li><a href='About.html'>About</a><li><a href='Brython.html'>Brython</a><li><a href='HW.html'>HW</a></li>
                       </ul>
                 </nav>
               </div>
@@ -142,7 +142,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Brython << <a href='Brython.html'>Previous</a> <br /><h1>w6</h1>
+    <div id="tipue_search_content">Brython << <a href='Brython.html'>Previous</a> <br /><h1>HW</h1>
+<p></p>
+<p><strong> </strong></p>
 <hr/>
 <p>
 <script src="https://unpkg.com/three@0.144.0/build/three.js" type="text/javascript"></script>
