--- a/config/content.htm
+++ b/config/content.htm
@@ -287,10 +287,8 @@ doc["threejsblock"].bind("click", threejsblock.do)
 <div style="width: 100%; height: 100%;"></div>
 <div style="width: 100%; height: 100%;"></div>
 <!-- editor2 結束 -->
-<h1>HW</h1>
-<p></p>
-<p><strong> </strong></p>
-<hr/>
+<h1>HW12</h1>
+<p><a href="https://mde.tw/cadnote/downloads/2b_w12_seat.txt">2b_w12_seat.txt</a></p>
 <p>
 <script src="https://unpkg.com/three@0.144.0/build/three.js" type="text/javascript"></script>
 </p>
