--- a/content/HW12.html
+++ b/content/HW12.html
@@ -131,7 +131,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='Brython.html'>Brython</a><li><a href='HW.html'>HW</a></li>
+                     <li><a href='About.html'>About</a><li><a href='Brython.html'>Brython</a><li><a href='HW12.html'>HW12</a></li>
                       </ul>
                 </nav>
               </div>
@@ -142,7 +142,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Brython << <a href='Brython.html'>Previous</a> <br /><h1>HW</h1>
+    <div id="tipue_search_content">Brython << <a href='Brython.html'>Previous</a> <br /><h1>HW12</h1>
+<p><a href="https://mde.tw/cadnote/downloads/2b_w12_seat.txt">2b_w12_seat.txt</a></p>
 <p></p>
 <p><strong> </strong></p>
 <hr/>
