12/31上傳w15-exam電腦輔助設計套件建立零組件

--- a/content/exam.html
+++ b/content/exam.html
@@ -131,7 +131,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='Brython.html'>Brython</a><li><a href='HW12.html'>HW12</a></li>
+                     <li><a href='About.html'>About</a><li><a href='Brython.html'>Brython</a><li><a href='exam.html'>exam</a></li>
                       </ul>
                 </nav>
               </div>
@@ -142,11 +142,22 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Brython << <a href='Brython.html'>Previous</a> <br /><h1>HW12</h1>
-<p><a href="https://mde.tw/cadnote/downloads/2b_w12_seat.txt">2b_w12_seat.txt</a></p>
-<p></p>
-<p><strong> </strong></p>
-<hr/>
+    <div id="tipue_search_content">Brython << <a href='Brython.html'>Previous</a> <br /><h1>exam</h1>
+<p><span>電腦輔助設計套件零組件尺寸</span></p>
+<div>組合圖:</div>
+<p><img alt="" height="450" src="./../images/螢幕擷取畫面 2023-12-21 115558.png" width="800"/></p>
+<p><strong>底面模板:</strong></p>
+<p><strong><img alt="" height="450" src="./../images/螢幕擷取畫面 2023-12-21 115713.png" width="800"/></strong></p>
+<p><strong>圓球:</strong></p>
+<p><strong><img alt="" height="450" src="./../images/螢幕擷取畫面 2023-12-21 115745.png" width="800"/></strong></p>
+<p>軌道:</p>
+<p><strong><img alt="" height="450" src="./../images/螢幕擷取畫面 2023-12-21 115738.png" width="800"/></strong></p>
+<p><strong></strong></p>
+<p><strong></strong></p>
+<p><strong></strong></p>
+<p><strong></strong></p>
+<p><strong></strong></p>
+<p><strong></strong></p>
 <p>
 <script src="https://unpkg.com/three@0.144.0/build/three.js" type="text/javascript"></script>
 </p><br />Brython << <a href='Brython.html'>Previous</a> </div>
