--- a/content/About.html
+++ b/content/About.html
@@ -131,7 +131,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='Brython.html'>Brython</a><li><a href='HW12.html'>HW12</a></li>
+                     <li><a href='About.html'>About</a><li><a href='Brython.html'>Brython</a><li><a href='exam.html'>exam</a></li>
                       </ul>
                 </nav>
               </div>
