--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -287,11 +287,22 @@ doc["threejsblock"].bind("click", threejsblock.do)
 <div style="width: 100%; height: 100%;"></div>
 <div style="width: 100%; height: 100%;"></div>
 <!-- editor2 結束 -->
-<h1>HW12</h1>
-<p><a href="https://mde.tw/cadnote/downloads/2b_w12_seat.txt">2b_w12_seat.txt</a></p>
-<p></p>
-<p><strong> </strong></p>
-<hr/>
+<h1>exam</h1>
+<p><span>電腦輔助設計套件零組件尺寸</span></p>
+<div>組合圖:</div>
+<p><img alt="" height="450" src="/images/螢幕擷取畫面 2023-12-21 115558.png" width="800"/></p>
+<p><strong>底面模板:</strong></p>
+<p><strong><img alt="" height="450" src="/images/螢幕擷取畫面 2023-12-21 115713.png" width="800"/></strong></p>
+<p><strong>圓球:</strong></p>
+<p><strong><img alt="" height="450" src="/images/螢幕擷取畫面 2023-12-21 115745.png" width="800"/></strong></p>
+<p>軌道:</p>
+<p><strong><img alt="" height="450" src="/images/螢幕擷取畫面 2023-12-21 115738.png" width="800"/></strong></p>
+<p><strong></strong></p>
+<p><strong></strong></p>
+<p><strong></strong></p>
+<p><strong></strong></p>
+<p><strong></strong></p>
+<p><strong></strong></p>
 <p>
 <script src="https://unpkg.com/three@0.144.0/build/three.js" type="text/javascript"></script>
 </p>
