--- a/content/Brython.html
+++ b/content/Brython.html
@@ -131,7 +131,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='Brython.html'>Brython</a><li><a href='exam.html'>exam</a></li>
+                     <li><a href='About.html'>About</a><li><a href='Brython.html'>Brython</a><li><a href='exam.html'>exam</a><li class='has-children'><a href='評分項目.html'>評分項目</a><ul class='dropdown'><li><a href='倉儲與網站評分項目:.html'>倉儲與網站評分項目:</a></li>
                       </ul>
                 </nav>
               </div>
