--- a/content/exam.html
+++ b/content/exam.html
@@ -131,7 +131,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='Brython.html'>Brython</a><li><a href='exam.html'>exam</a></li>
+                     <li><a href='About.html'>About</a><li><a href='Brython.html'>Brython</a><li><a href='exam.html'>exam</a><li class='has-children'><a href='評分項目.html'>評分項目</a><ul class='dropdown'><li><a href='倉儲與網站評分項目:.html'>倉儲與網站評分項目:</a></li>
                       </ul>
                 </nav>
               </div>
@@ -142,7 +142,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Brython << <a href='Brython.html'>Previous</a> <br /><h1>exam</h1>
+    <div id="tipue_search_content">Brython << <a href='Brython.html'>Previous</a> <a href='評分項目.html'>Next</a> >> 評分項目<br /><h1>exam</h1>
 <p><span>電腦輔助設計套件零組件尺寸</span></p>
 <div>組合圖:</div>
 <p><img alt="" height="450" src="./../images/螢幕擷取畫面 2023-12-21 115558.png" width="800"/></p>
@@ -153,14 +153,7 @@ img.add_border {
 <p>軌道:</p>
 <p><strong><img alt="" height="450" src="./../images/螢幕擷取畫面 2023-12-21 115738.png" width="800"/></strong></p>
 <p><strong></strong></p>
-<p><strong></strong></p>
-<p><strong></strong></p>
-<p><strong></strong></p>
-<p><strong></strong></p>
-<p><strong></strong></p>
-<p>
-<script src="https://unpkg.com/three@0.144.0/build/three.js" type="text/javascript"></script>
-</p><br />Brython << <a href='Brython.html'>Previous</a> </div>
+<br />Brython << <a href='Brython.html'>Previous</a> <a href='評分項目.html'>Next</a> >> 評分項目</div>
         
     <!-- footer -->
       <div class="container">
