--- a/config/content.htm
+++ b/config/content.htm
@@ -1,4 +1,6 @@
 <h1>About</h1>
+<p>41123207王騰甫</p>
+<p><span>努力在雲端、自架 server 與近端維護 Github 上的倉儲與網站內容</span></p>
 <p><a href="https://github.com/mdecycu/cmsite"> https://github.com/mdecycu/cmsite </a></p>
 <p></p>
 <h1>Brython</h1>
@@ -299,11 +301,11 @@ doc["threejsblock"].bind("click", threejsblock.do)
 <p><strong><img alt="" height="450" src="/images/螢幕擷取畫面 2023-12-21 115738.png" width="800"/></strong></p>
 <p><strong></strong></p>
 <h1><span>評分項目</span></h1>
-<h2><span>倉儲與網站評分項目:</span></h2>
+<h2><span>倉儲與網站評分項目</span></h2>
 <p><span>A: 是否按照進度明確標示倉儲的改版歷程 ☑️</span></p>
 <p><span>B: 是否根據<span> </span><span>IPv4 與 IPv6</span><span> </span>網路環境設定進行作法討論☑️</span></p>
 <p><span>C: 是否就<span><span> </span>Replit、s.cycu.org 與 localhost</span><span> </span>情境下對個人與分組倉儲進行設定操作</span></p>
-<p><span>D: 是否就所分配的<span> </span><span>CAD 套件</span>從安裝設定到繪圖提供內容參考</span></p>
+<p><span>D: 是否就所分配的<span> </span><span>CAD 套件</span>從安裝設定到繪圖提供內容參考☑️</span></p>
 <p><span>E: 是否使用所分配的 CAD 套件完成<span>專案一零組件繪圖</span>, 並提供零組件下載</span></p>
 <p><span>F: 是否將自行繪製的專案一零組件<span>轉入 CoppeliaSim</span></span></p>
 <p><span>G: 是否利用<span> </span><span>ZMQ Remote API Python</span><span> </span>對專案一轉入的零組件設定感測器, 並進行<span>鋼球永動模擬</span></span></p>
@@ -313,7 +315,11 @@ doc["threejsblock"].bind("click", threejsblock.do)
 <p><span>K: 是否利用<span> </span><span>ZMQ Remote API Python</span><span> </span>對專案二轉入的零組件設定感測器, 並進行鋼球永動模擬</span></p>
 <p><span>L: 是否針對專案二的 1D 平台鋼球平衡系統所需的<span> </span><span>PID 控制理論</span>進行資料收集與 ChatGPT 對答</span></p>
 <p><strong></strong></p>
-<p><strong></strong></p>
+<h1><strong><span>分配CAD 套件之</span><span>安裝設定</span></strong></h1>
+<p>AutoDesk 公司旗下的電腦輔助機械設計套件官方網站</p>
+<p><a href="https://www.autodesk.com/education/edu-software/overview?sorting=featured&amp;filters=individual">https://www.autodesk.com/education/edu-software/overview?sorting=featured&amp;filters=individual</a></p>
+<p>直接以學校信箱及基本資料登入</p>
+<p><span>Inventor 可</span><a href="https://software.nfu.edu.tw/Autodesk/autodesk2022.pdf">直接從學校網站下載</a><span>, 且</span><a href="https://accounts.autodesk.com/register">教育版的 A360</a><span><span> </span>可在雲端或近端啟動, 但近端必須安裝對應套件.</span></p>
 <p><strong></strong></p>
 <p><strong></strong></p>
 <p><strong></strong></p>
