--- a/content/About.html
+++ b/content/About.html
@@ -131,7 +131,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='Brython.html'>Brython</a><li><a href='exam.html'>exam</a><li class='has-children'><a href='評分項目.html'>評分項目</a><ul class='dropdown'><li><a href='倉儲與網站評分項目:.html'>倉儲與網站評分項目:</a></li>
+                     <li><a href='About.html'>About</a><li><a href='Brython.html'>Brython</a><li><a href='exam.html'>exam</a><li class='has-children'><a href='評分項目.html'>評分項目</a><ul class='dropdown'><li><a href='倉儲與網站評分項目.html'>倉儲與網站評分項目</a></li></ul><li><a href='分配CAD 套件之安裝設定.html'>分配CAD 套件之安裝設定</a></li>
                       </ul>
                 </nav>
               </div>
@@ -143,6 +143,8 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content"> <a href='Brython.html'>Next</a> >> Brython<br /><h1>About</h1>
+<p>41123207王騰甫</p>
+<p><span>努力在雲端、自架 server 與近端維護 Github 上的倉儲與網站內容</span></p>
 <p><a href="https://github.com/mdecycu/cmsite"> https://github.com/mdecycu/cmsite </a></p>
 <p></p>
 <br /> <a href='Brython.html'>Next</a> >> Brython</div>
