--- a/content/倉儲與網站評分項目.html
+++ b/content/倉儲與網站評分項目.html
@@ -131,7 +131,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='Brython.html'>Brython</a><li><a href='exam.html'>exam</a><li class='has-children'><a href='評分項目.html'>評分項目</a><ul class='dropdown'><li><a href='倉儲與網站評分項目:.html'>倉儲與網站評分項目:</a></li>
+                     <li><a href='About.html'>About</a><li><a href='Brython.html'>Brython</a><li><a href='exam.html'>exam</a><li class='has-children'><a href='評分項目.html'>評分項目</a><ul class='dropdown'><li><a href='倉儲與網站評分項目.html'>倉儲與網站評分項目</a></li></ul><li><a href='分配CAD 套件之安裝設定.html'>分配CAD 套件之安裝設定</a></li>
                       </ul>
                 </nav>
               </div>
@@ -142,11 +142,11 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">評分項目 << <a href='評分項目.html'>Previous</a> <br /><h1>倉儲與網站評分項目:</h1>
+    <div id="tipue_search_content">評分項目 << <a href='評分項目.html'>Previous</a> <a href='分配CAD 套件之安裝設定.html'>Next</a> >> 分配CAD 套件之安裝設定<br /><h1>倉儲與網站評分項目</h1>
 <p><span>A: 是否按照進度明確標示倉儲的改版歷程 ☑️</span></p>
 <p><span>B: 是否根據<span> </span><span>IPv4 與 IPv6</span><span> </span>網路環境設定進行作法討論☑️</span></p>
 <p><span>C: 是否就<span><span> </span>Replit、s.cycu.org 與 localhost</span><span> </span>情境下對個人與分組倉儲進行設定操作</span></p>
-<p><span>D: 是否就所分配的<span> </span><span>CAD 套件</span>從安裝設定到繪圖提供內容參考</span></p>
+<p><span>D: 是否就所分配的<span> </span><span>CAD 套件</span>從安裝設定到繪圖提供內容參考☑️</span></p>
 <p><span>E: 是否使用所分配的 CAD 套件完成<span>專案一零組件繪圖</span>, 並提供零組件下載</span></p>
 <p><span>F: 是否將自行繪製的專案一零組件<span>轉入 CoppeliaSim</span></span></p>
 <p><span>G: 是否利用<span> </span><span>ZMQ Remote API Python</span><span> </span>對專案一轉入的零組件設定感測器, 並進行<span>鋼球永動模擬</span></span></p>
@@ -156,13 +156,7 @@ img.add_border {
 <p><span>K: 是否利用<span> </span><span>ZMQ Remote API Python</span><span> </span>對專案二轉入的零組件設定感測器, 並進行鋼球永動模擬</span></p>
 <p><span>L: 是否針對專案二的 1D 平台鋼球平衡系統所需的<span> </span><span>PID 控制理論</span>進行資料收集與 ChatGPT 對答</span></p>
 <p><strong></strong></p>
-<p><strong></strong></p>
-<p><strong></strong></p>
-<p><strong></strong></p>
-<p><strong></strong></p>
-<p>
-<script src="https://unpkg.com/three@0.144.0/build/three.js" type="text/javascript"></script>
-</p><br />評分項目 << <a href='評分項目.html'>Previous</a> </div>
+<br />評分項目 << <a href='評分項目.html'>Previous</a> <a href='分配CAD 套件之安裝設定.html'>Next</a> >> 分配CAD 套件之安裝設定</div>
         
     <!-- footer -->
       <div class="container">
