--- a/content/評分項目.html
+++ b/content/評分項目.html
@@ -131,7 +131,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='Brython.html'>Brython</a><li><a href='exam.html'>exam</a><li class='has-children'><a href='評分項目.html'>評分項目</a><ul class='dropdown'><li><a href='倉儲與網站評分項目:.html'>倉儲與網站評分項目:</a></li>
+                     <li><a href='About.html'>About</a><li><a href='Brython.html'>Brython</a><li><a href='exam.html'>exam</a><li class='has-children'><a href='評分項目.html'>評分項目</a><ul class='dropdown'><li><a href='倉儲與網站評分項目.html'>倉儲與網站評分項目</a></li></ul><li><a href='分配CAD 套件之安裝設定.html'>分配CAD 套件之安裝設定</a></li>
                       </ul>
                 </nav>
               </div>
@@ -142,8 +142,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">exam << <a href='exam.html'>Previous</a> <a href='倉儲與網站評分項目:.html'>Next</a> >> 倉儲與網站評分項目:<br /><h1>評分項目</h1>
-<br />exam << <a href='exam.html'>Previous</a> <a href='倉儲與網站評分項目:.html'>Next</a> >> 倉儲與網站評分項目:</div>
+    <div id="tipue_search_content">exam << <a href='exam.html'>Previous</a> <a href='倉儲與網站評分項目.html'>Next</a> >> 倉儲與網站評分項目<br /><h1>評分項目</h1>
+<br />exam << <a href='exam.html'>Previous</a> <a href='倉儲與網站評分項目.html'>Next</a> >> 倉儲與網站評分項目</div>
         
     <!-- footer -->
       <div class="container">
