1/5 1/6上傳exam-專案一Inventer電腦輔助設計套件零組件尺寸

--- a/content/exam-專案二.html
+++ b/content/exam-專案二.html
@@ -142,12 +142,18 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='Brython.html'>Next</a> >> Brython<br /><h1>About</h1>
-<p>41123207王騰甫</p>
-<p><span>努力在雲端、自架 server 與近端維護 Github 上的倉儲與網站內容</span></p>
-<p><a href="https://github.com/mdecycu/cmsite"> https://github.com/mdecycu/cmsite </a></p>
-<p></p>
-<br /> <a href='Brython.html'>Next</a> >> Brython</div>
+    <div id="tipue_search_content">exam-專案一 << <a href='exam-專案一.html'>Previous</a> <a href='評分項目.html'>Next</a> >> 評分項目<br /><h1>exam-專案二</h1>
+<p><span>Inventer電腦輔助設計套件零組件尺寸</span></p>
+<div>組合圖:</div>
+<p><img alt="" height="450" src="./../images/螢幕擷取畫面 2023-12-21 115558.png" width="800"/></p>
+<p><strong>底面模板:</strong></p>
+<p><strong><img alt="" height="450" src="./../images/螢幕擷取畫面 2023-12-21 115713.png" width="800"/></strong></p>
+<p><strong>圓球:</strong></p>
+<p><strong><img alt="" height="450" src="./../images/螢幕擷取畫面 2023-12-21 115745.png" width="800"/></strong></p>
+<p>軌道:</p>
+<p><strong><img alt="" height="450" src="./../images/螢幕擷取畫面 2023-12-21 115738.png" width="800"/></strong></p>
+<p><strong></strong></p>
+<br />exam-專案一 << <a href='exam-專案一.html'>Previous</a> <a href='評分項目.html'>Next</a> >> 評分項目</div>
         
     <!-- footer -->
       <div class="container">
