--- a/content/Brython.html
+++ b/content/Brython.html
@@ -131,7 +131,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='Brython.html'>Brython</a><li><a href='exam.html'>exam</a><li class='has-children'><a href='評分項目.html'>評分項目</a><ul class='dropdown'><li><a href='倉儲與網站評分項目.html'>倉儲與網站評分項目</a></li></ul><li><a href='分配CAD 套件之安裝設定.html'>分配CAD 套件之安裝設定</a></li>
+                     <li><a href='About.html'>About</a><li><a href='Brython.html'>Brython</a><li><a href='exam-專案一.html'>exam-專案一</a><li><a href='exam-專案二.html'>exam-專案二</a><li class='has-children'><a href='評分項目.html'>評分項目</a><ul class='dropdown'><li><a href='倉儲與網站評分項目.html'>倉儲與網站評分項目</a></li></ul><li><a href='分配CAD 套件之安裝設定.html'>分配CAD 套件之安裝設定</a></li>
                       </ul>
                 </nav>
               </div>
@@ -142,7 +142,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <a href='exam.html'>Next</a> >> exam<br /><h1>Brython</h1>
+    <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <a href='exam-專案一.html'>Next</a> >> exam-專案一<br /><h1>Brython</h1>
 <p><a href="https://en.wikipedia.org/wiki/Python_(programming_language)">https://en.wikipedia.org/wiki/Python_(programming_language)</a></p>
 <h4>Examples:</h4>
 <p style="padding-left: 30px;"><a href="https://gist.github.com/mdecycu/d9082d678096bd58378d6afe2c7fa05d">https://gist.github.com/mdecycu/d9082d678096bd58378d6afe2c7fa05d</a></p>
@@ -428,7 +428,7 @@ doc["threejsblock"].bind("click", threejsblock.do)
 <div style="width: 100%; height: 100%;"></div>
 <div style="width: 100%; height: 100%;"></div>
 <!-- editor2 結束 -->
-<br />About << <a href='About.html'>Previous</a> <a href='exam.html'>Next</a> >> exam</div>
+<br />About << <a href='About.html'>Previous</a> <a href='exam-專案一.html'>Next</a> >> exam-專案一</div>
         
     <!-- footer -->
       <div class="container">
