--- a/content/exam-專案一.html
+++ b/content/exam-專案一.html
@@ -131,7 +131,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='Brython.html'>Brython</a><li><a href='exam.html'>exam</a><li class='has-children'><a href='評分項目.html'>評分項目</a><ul class='dropdown'><li><a href='倉儲與網站評分項目.html'>倉儲與網站評分項目</a></li></ul><li><a href='分配CAD 套件之安裝設定.html'>分配CAD 套件之安裝設定</a></li>
+                     <li><a href='About.html'>About</a><li><a href='Brython.html'>Brython</a><li><a href='exam-專案一.html'>exam-專案一</a><li><a href='exam-專案二.html'>exam-專案二</a><li class='has-children'><a href='評分項目.html'>評分項目</a><ul class='dropdown'><li><a href='倉儲與網站評分項目.html'>倉儲與網站評分項目</a></li></ul><li><a href='分配CAD 套件之安裝設定.html'>分配CAD 套件之安裝設定</a></li>
                       </ul>
                 </nav>
               </div>
@@ -142,18 +142,15 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Brython << <a href='Brython.html'>Previous</a> <a href='評分項目.html'>Next</a> >> 評分項目<br /><h1>exam</h1>
-<p><span>電腦輔助設計套件零組件尺寸</span></p>
-<div>組合圖:</div>
-<p><img alt="" height="450" src="./../images/螢幕擷取畫面 2023-12-21 115558.png" width="800"/></p>
+    <div id="tipue_search_content">Brython << <a href='Brython.html'>Previous</a> <a href='exam-專案二.html'>Next</a> >> exam-專案二<br /><h1>exam-專案一</h1>
+<p><span>Inventer電腦輔助設計套件零組件尺寸</span></p>
+<div>組合圖:<img alt="" height="450" src="./../images/5.png" width="800"/></div>
 <p><strong>底面模板:</strong></p>
-<p><strong><img alt="" height="450" src="./../images/螢幕擷取畫面 2023-12-21 115713.png" width="800"/></strong></p>
-<p><strong>圓球:</strong></p>
-<p><strong><img alt="" height="450" src="./../images/螢幕擷取畫面 2023-12-21 115745.png" width="800"/></strong></p>
-<p>軌道:</p>
-<p><strong><img alt="" height="450" src="./../images/螢幕擷取畫面 2023-12-21 115738.png" width="800"/></strong></p>
-<p><strong></strong></p>
-<br />Brython << <a href='Brython.html'>Previous</a> <a href='評分項目.html'>Next</a> >> 評分項目</div>
+<p><strong><img alt="" height="450" src="./../images/螢幕擷取畫面 2024-01-07 203345.png" width="800"/></strong></p>
+<p><strong>支撐柱:<br/><img alt="" height="450" src="./../images/4.png" width="800"/><br/></strong></p>
+<p><strong>圓盤裝置:<img alt="" height="450" src="./../images/2.png" width="800"/></strong></p>
+<p><b>球軌:<br/><img alt="" height="450" src="./../images/3.png" width="800"/><br/></b></p>
+<br />Brython << <a href='Brython.html'>Previous</a> <a href='exam-專案二.html'>Next</a> >> exam-專案二</div>
         
     <!-- footer -->
       <div class="container">
