--- a/content/About.html
+++ b/content/About.html
@@ -131,7 +131,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='Brython.html'>Brython</a><li><a href='exam-專案一.html'>exam-專案一</a><li><a href='exam-專案二.html'>exam-專案二</a><li class='has-children'><a href='評分項目.html'>評分項目</a><ul class='dropdown'><li><a href='倉儲與網站評分項目.html'>倉儲與網站評分項目</a></li></ul><li><a href='分配CAD 套件之安裝設定.html'>分配CAD 套件之安裝設定</a></li>
+                     <li><a href='About.html'>About</a><li><a href='Brython.html'>Brython</a><li><a href='exam-專案一.html'>exam-專案一</a><li><a href='exam-專案二.html'>exam-專案二</a><li class='has-children'><a href='評分項目.html'>評分項目</a><ul class='dropdown'><li><a href='倉儲與網站評分項目.html'>倉儲與網站評分項目</a><li><a href='分配CAD 套件之安裝設定.html'>分配CAD 套件之安裝設定</a></li>
                       </ul>
                 </nav>
               </div>
