--- a/content/exam-專案二.html
+++ b/content/exam-專案二.html
@@ -131,7 +131,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='Brython.html'>Brython</a><li><a href='exam-專案一.html'>exam-專案一</a><li><a href='exam-專案二.html'>exam-專案二</a><li class='has-children'><a href='評分項目.html'>評分項目</a><ul class='dropdown'><li><a href='倉儲與網站評分項目.html'>倉儲與網站評分項目</a></li></ul><li><a href='分配CAD 套件之安裝設定.html'>分配CAD 套件之安裝設定</a></li>
+                     <li><a href='About.html'>About</a><li><a href='Brython.html'>Brython</a><li><a href='exam-專案一.html'>exam-專案一</a><li><a href='exam-專案二.html'>exam-專案二</a><li class='has-children'><a href='評分項目.html'>評分項目</a><ul class='dropdown'><li><a href='倉儲與網站評分項目.html'>倉儲與網站評分項目</a><li><a href='分配CAD 套件之安裝設定.html'>分配CAD 套件之安裝設定</a></li>
                       </ul>
                 </nav>
               </div>
@@ -146,9 +146,9 @@ img.add_border {
 <p><span>Inventer電腦輔助設計套件零組件尺寸</span></p>
 <div>組合圖:</div>
 <p><img alt="" height="450" src="./../images/螢幕擷取畫面 2023-12-21 115558.png" width="800"/></p>
-<p><strong>底面模板:</strong></p>
+<p>底面模板:</p>
 <p><strong><img alt="" height="450" src="./../images/螢幕擷取畫面 2023-12-21 115713.png" width="800"/></strong></p>
-<p><strong>圓球:</strong></p>
+<p>圓球:</p>
 <p><strong><img alt="" height="450" src="./../images/螢幕擷取畫面 2023-12-21 115745.png" width="800"/></strong></p>
 <p>軌道:</p>
 <p><strong><img alt="" height="450" src="./../images/螢幕擷取畫面 2023-12-21 115738.png" width="800"/></strong></p>
