1/8更新Wink操作影片

--- a/config/content.htm
+++ b/config/content.htm
@@ -338,8 +338,18 @@ doc["threejsblock"].bind("click", threejsblock.do)
 <p>直接以學校信箱及基本資料登入</p>
 <p><span>Inventor 可</span><a href="https://software.nfu.edu.tw/Autodesk/autodesk2022.pdf">直接從學校網站下載</a><span>, 且</span><a href="https://accounts.autodesk.com/register">教育版的 A360</a><span><span> </span>可在雲端或近端啟動, 但近端必須安裝對應套件.</span></p>
 <p><strong></strong></p>
+<h2>Wink操作影片</h2>
+<p><a href="https://drive.google.com/drive/u/0/home">https://drive.google.com/drive/u/0/home</a></p>
+<p><strong></strong></p>
+<p><strong></strong></p>
+<p><strong></strong></p>
+<p><strong></strong></p>
+<p><strong></strong></p>
 <p><strong></strong></p>
 <p><strong></strong></p>
 <p>
 <script src="https://unpkg.com/three@0.144.0/build/three.js" type="text/javascript"></script>
 </p>
+<div id="gtx-trans" style="position: absolute; left: -13px; top: 7697.54px;">
+<div class="gtx-trans-icon"></div>
+</div>
