--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -291,19 +291,28 @@ doc["threejsblock"].bind("click", threejsblock.do)
 <!-- editor2 結束 -->
 <h1>exam-專案一</h1>
 <p><span>Inventer電腦輔助設計套件零組件尺寸</span></p>
-<div>組合圖:<img alt="" height="450" src="/images/5.png" width="800"/></div>
-<p><strong>底面模板:</strong></p>
+<div>組合圖:</div>
+<div></div>
+<div><img alt="" height="450" src="/images/5.png" width="800"/></div>
+<p></p>
+<p>底面模板:</p>
 <p><strong><img alt="" height="450" src="/images/螢幕擷取畫面 2024-01-07 203345.png" width="800"/></strong></p>
-<p><strong>支撐柱:<br/><img alt="" height="450" src="/images/4.png" width="800"/><br/></strong></p>
-<p><strong>圓盤裝置:<img alt="" height="450" src="/images/2.png" width="800"/></strong></p>
-<p><b>球軌:<br/><img alt="" height="450" src="/images/3.png" width="800"/><br/></b></p>
+<p></p>
+<p>支撐柱:</p>
+<p><strong><br/><img alt="" height="450" src="/images/4.png" width="800"/><br/></strong></p>
+<p></p>
+<p>圓盤裝置:</p>
+<p><strong><img alt="" height="450" src="/images/2.png" width="800"/></strong></p>
+<p></p>
+<p>球軌:</p>
+<p><b><br/><img alt="" height="450" src="/images/3.png" width="800"/><br/></b></p>
 <h1>exam-專案二</h1>
 <p><span>Inventer電腦輔助設計套件零組件尺寸</span></p>
 <div>組合圖:</div>
 <p><img alt="" height="450" src="/images/螢幕擷取畫面 2023-12-21 115558.png" width="800"/></p>
-<p><strong>底面模板:</strong></p>
+<p>底面模板:</p>
 <p><strong><img alt="" height="450" src="/images/螢幕擷取畫面 2023-12-21 115713.png" width="800"/></strong></p>
-<p><strong>圓球:</strong></p>
+<p>圓球:</p>
 <p><strong><img alt="" height="450" src="/images/螢幕擷取畫面 2023-12-21 115745.png" width="800"/></strong></p>
 <p>軌道:</p>
 <p><strong><img alt="" height="450" src="/images/螢幕擷取畫面 2023-12-21 115738.png" width="800"/></strong></p>
@@ -312,9 +321,9 @@ doc["threejsblock"].bind("click", threejsblock.do)
 <h2><span>倉儲與網站評分項目</span></h2>
 <p><span>A: 是否按照進度明確標示倉儲的改版歷程 ☑️</span></p>
 <p><span>B: 是否根據<span> </span><span>IPv4 與 IPv6</span><span> </span>網路環境設定進行作法討論☑️</span></p>
-<p><span>C: 是否就<span><span> </span>Replit、s.cycu.org 與 localhost</span><span> </span>情境下對個人與分組倉儲進行設定操作</span></p>
+<p><span>C: 是否就<span><span> </span>Replit、s.cycu.org 與 localhost</span><span> </span>情境下對個人與分組倉儲進行設定操作☑️</span></p>
 <p><span>D: 是否就所分配的<span> </span><span>CAD 套件</span>從安裝設定到繪圖提供內容參考☑️</span></p>
-<p><span>E: 是否使用所分配的 CAD 套件完成<span>專案一零組件繪圖</span>, 並提供零組件下載</span></p>
+<p><span>E: 是否使用所分配的 CAD 套件完成<span>專案一零組件繪圖</span>, 並提供零組件下載☑️</span></p>
 <p><span>F: 是否將自行繪製的專案一零組件<span>轉入 CoppeliaSim</span></span></p>
 <p><span>G: 是否利用<span> </span><span>ZMQ Remote API Python</span><span> </span>對專案一轉入的零組件設定感測器, 並進行<span>鋼球永動模擬</span></span></p>
 <p><span>H: 是否實際操作<span> </span><span>Triangle 軌道系統</span>的鋼球永動模擬</span></p>
@@ -323,14 +332,18 @@ doc["threejsblock"].bind("click", threejsblock.do)
 <p><span>K: 是否利用<span> </span><span>ZMQ Remote API Python</span><span> </span>對專案二轉入的零組件設定感測器, 並進行鋼球永動模擬</span></p>
 <p><span>L: 是否針對專案二的 1D 平台鋼球平衡系統所需的<span> </span><span>PID 控制理論</span>進行資料收集與 ChatGPT 對答</span></p>
 <p><strong></strong></p>
-<h1><strong><span>分配CAD 套件之</span><span>安裝設定</span></strong></h1>
+<h2><strong><span>分配CAD 套件之</span><span>安裝設定</span></strong></h2>
 <p>AutoDesk 公司旗下的電腦輔助機械設計套件官方網站</p>
 <p><a href="https://www.autodesk.com/education/edu-software/overview?sorting=featured&amp;filters=individual">https://www.autodesk.com/education/edu-software/overview?sorting=featured&amp;filters=individual</a></p>
 <p>直接以學校信箱及基本資料登入</p>
 <p><span>Inventor 可</span><a href="https://software.nfu.edu.tw/Autodesk/autodesk2022.pdf">直接從學校網站下載</a><span>, 且</span><a href="https://accounts.autodesk.com/register">教育版的 A360</a><span><span> </span>可在雲端或近端啟動, 但近端必須安裝對應套件.</span></p>
 <p><strong></strong></p>
+<h2>Wink操作影片</h2>
 <p><strong></strong></p>
 <p><strong></strong></p>
 <p>
 <script src="https://unpkg.com/three@0.144.0/build/three.js" type="text/javascript"></script>
 </p>
+<div id="gtx-trans" style="position: absolute; left: -45px; top: 7669.45px;">
+<div class="gtx-trans-icon"></div>
+</div>
