--- a/content/Wink操作影片.html
+++ b/content/Wink操作影片.html
@@ -142,13 +142,21 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">倉儲與網站評分項目 << <a href='倉儲與網站評分項目.html'>Previous</a> <a href='Wink操作影片.html'>Next</a> >> Wink操作影片<br /><h1>分配CAD 套件之安裝設定</h1>
-<p>AutoDesk 公司旗下的電腦輔助機械設計套件官方網站</p>
-<p><a href="https://www.autodesk.com/education/edu-software/overview?sorting=featured&amp;filters=individual">https://www.autodesk.com/education/edu-software/overview?sorting=featured&amp;filters=individual</a></p>
-<p>直接以學校信箱及基本資料登入</p>
-<p><span>Inventor 可</span><a href="https://software.nfu.edu.tw/Autodesk/autodesk2022.pdf">直接從學校網站下載</a><span>, 且</span><a href="https://accounts.autodesk.com/register">教育版的 A360</a><span><span> </span>可在雲端或近端啟動, 但近端必須安裝對應套件.</span></p>
+    <div id="tipue_search_content">分配CAD 套件之安裝設定 << <a href='分配CAD 套件之安裝設定.html'>Previous</a> <br /><h1>Wink操作影片</h1>
+<p><a href="https://drive.google.com/drive/u/0/home">https://drive.google.com/drive/u/0/home</a></p>
 <p><strong></strong></p>
-<br />倉儲與網站評分項目 << <a href='倉儲與網站評分項目.html'>Previous</a> <a href='Wink操作影片.html'>Next</a> >> Wink操作影片</div>
+<p><strong></strong></p>
+<p><strong></strong></p>
+<p><strong></strong></p>
+<p><strong></strong></p>
+<p><strong></strong></p>
+<p><strong></strong></p>
+<p>
+<script src="https://unpkg.com/three@0.144.0/build/three.js" type="text/javascript"></script>
+</p>
+<div id="gtx-trans" style="position: absolute; left: -13px; top: 7697.54px;">
+<div class="gtx-trans-icon"></div>
+</div><br />分配CAD 套件之安裝設定 << <a href='分配CAD 套件之安裝設定.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
