1/9更新Chatgpt座位表對答

--- a/content/Wink操作影片.html
+++ b/content/Wink操作影片.html
@@ -131,7 +131,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='Brython.html'>Brython</a><li><a href='exam-專案一.html'>exam-專案一</a><li><a href='exam-專案二.html'>exam-專案二</a><li class='has-children'><a href='評分項目.html'>評分項目</a><ul class='dropdown'><li><a href='倉儲與網站評分項目.html'>倉儲與網站評分項目</a><li><a href='分配CAD 套件之安裝設定.html'>分配CAD 套件之安裝設定</a><li><a href='Wink操作影片.html'>Wink操作影片</a></li>
+                     <li><a href='About.html'>About</a><li><a href='Brython.html'>Brython</a><li><a href='exam-專案一.html'>exam-專案一</a><li><a href='exam-專案二.html'>exam-專案二</a><li class='has-children'><a href='評分項目.html'>評分項目</a><ul class='dropdown'><li><a href='倉儲與網站評分項目.html'>倉儲與網站評分項目</a><li><a href='分配CAD 套件之安裝設定.html'>分配CAD 套件之安裝設定</a><li><a href='Wink操作影片.html'>Wink操作影片</a><li><a href='Chatgpt座位表對答.html'>Chatgpt座位表對答</a></li>
                       </ul>
                 </nav>
               </div>
@@ -142,21 +142,20 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">分配CAD 套件之安裝設定 << <a href='分配CAD 套件之安裝設定.html'>Previous</a> <br /><h1>Wink操作影片</h1>
+    <div id="tipue_search_content">分配CAD 套件之安裝設定 << <a href='分配CAD 套件之安裝設定.html'>Previous</a> <a href='Chatgpt座位表對答.html'>Next</a> >> Chatgpt座位表對答<br /><h1>Wink操作影片</h1>
 <p><a href="https://drive.google.com/drive/u/0/home">https://drive.google.com/drive/u/0/home</a></p>
+<p>利用 Wink 建立操作影片的步驟:</p>
+<ol>
+<li>設定 ffmpeg.exe 所在位置, 若使用隨身碟中的可攜程式系統, 可將 ffmpeg.exe 放在 data 目錄中, 並以 wink_ffmpeg.reg 進行設定, 也可將 Wink 的啟動與 start_ipv6.bat 進行整合.</li>
+<li>開啟 Wink 新專案.</li>
+<li>每按下一次 Pause 鍵, 可擷取操作過程中的畫面影格 (利用 Zoomit 放大所要強調的操作內容, 並以紅線框列).</li>
+<li>操作錄製結束後, 從右下方的 Tray 中, 以滑鼠左鍵點選, 在 Wink 圖示中, 以滑鼠右鍵帶出 Finish Capture 按鍵, 點選後即可回到 Wink 專案區.</li>
+<li>在每一頁影格中加入註解說明 TextBox 之前, 先利用 Project - Resize All Frames 將影格縮小至 1008 x630.</li>
+<li>完成註解說明後, 可以逐一移動各頁面滑鼠游標位置, 並決定各頁面影片播放時的停留時間.</li>
+<li>最後以 Render 按鈕進行轉檔, 並利用 View Rendered Output 檢視所建立的操作影片.</li>
+</ol>
 <p><strong></strong></p>
-<p><strong></strong></p>
-<p><strong></strong></p>
-<p><strong></strong></p>
-<p><strong></strong></p>
-<p><strong></strong></p>
-<p><strong></strong></p>
-<p>
-<script src="https://unpkg.com/three@0.144.0/build/three.js" type="text/javascript"></script>
-</p>
-<div id="gtx-trans" style="position: absolute; left: -13px; top: 7697.54px;">
-<div class="gtx-trans-icon"></div>
-</div><br />分配CAD 套件之安裝設定 << <a href='分配CAD 套件之安裝設定.html'>Previous</a> </div>
+<br />分配CAD 套件之安裝設定 << <a href='分配CAD 套件之安裝設定.html'>Previous</a> <a href='Chatgpt座位表對答.html'>Next</a> >> Chatgpt座位表對答</div>
         
     <!-- footer -->
       <div class="container">
