--- a/config/content.htm
+++ b/config/content.htm
@@ -1,6 +1,6 @@
 <h1>About</h1>
-<p>41123207王騰甫</p>
-<p><span>努力在雲端、自架 server 與近端維護 Github 上的倉儲與網站內容</span></p>
+<p><span style="color: #800000;"><strong>41123207王騰甫</strong></span></p>
+<p><span style="color: #800000;"><strong>努力在雲端、自架 server 與近端維護 Github 上的倉儲與網站內容</strong></span></p>
 <p><a href="https://github.com/mdecycu/cmsite"> https://github.com/mdecycu/cmsite </a></p>
 <p></p>
 <h1>Brython</h1>
@@ -327,7 +327,7 @@ doc["threejsblock"].bind("click", threejsblock.do)
 <p><span>F: 是否將自行繪製的專案一零組件<span>轉入 CoppeliaSim</span></span></p>
 <p><span>G: 是否利用<span> </span><span>ZMQ Remote API Python</span><span> </span>對專案一轉入的零組件設定感測器, 並進行<span>鋼球永動模擬</span></span></p>
 <p><span>H: 是否實際操作<span> </span><span>Triangle 軌道系統</span>的鋼球永動模擬</span></p>
-<p><span>I: 是否完成 W15 的平面雙 U 迴路上的<span>鋼球永動系統繪圖、轉檔與系統模擬</span></span></p>
+<p><span>I: 是否完成 W15 的平面雙 U 迴路上的<span>鋼球永動系統繪圖、轉檔與系統模擬☑️</span></span></p>
 <p><span>J: 是否使用所分配的 CAD 套件完成<span>專案二 1D 平台零組件繪圖</span>, 並提供零組件下載☑️</span></p>
 <p><span>K: 是否利用<span> </span><span>ZMQ Remote API Python</span><span> </span>對專案二轉入的零組件設定感測器, 並進行鋼球永動模擬</span></p>
 <p><span>L: 是否針對專案二的 1D 平台鋼球平衡系統所需的<span> </span><span>PID 控制理論</span>進行資料收集與 ChatGPT 對答</span></p>
@@ -340,7 +340,20 @@ doc["threejsblock"].bind("click", threejsblock.do)
 <p><strong></strong></p>
 <h2>Wink操作影片</h2>
 <p><a href="https://drive.google.com/drive/u/0/home">https://drive.google.com/drive/u/0/home</a></p>
+<p>利用 Wink 建立操作影片的步驟:</p>
+<ol>
+<li>設定 ffmpeg.exe 所在位置, 若使用隨身碟中的可攜程式系統, 可將 ffmpeg.exe 放在 data 目錄中, 並以 wink_ffmpeg.reg 進行設定, 也可將 Wink 的啟動與 start_ipv6.bat 進行整合.</li>
+<li>開啟 Wink 新專案.</li>
+<li>每按下一次 Pause 鍵, 可擷取操作過程中的畫面影格 (利用 Zoomit 放大所要強調的操作內容, 並以紅線框列).</li>
+<li>操作錄製結束後, 從右下方的 Tray 中, 以滑鼠左鍵點選, 在 Wink 圖示中, 以滑鼠右鍵帶出 Finish Capture 按鍵, 點選後即可回到 Wink 專案區.</li>
+<li>在每一頁影格中加入註解說明 TextBox 之前, 先利用 Project - Resize All Frames 將影格縮小至 1008 x630.</li>
+<li>完成註解說明後, 可以逐一移動各頁面滑鼠游標位置, 並決定各頁面影片播放時的停留時間.</li>
+<li>最後以 Render 按鈕進行轉檔, 並利用 View Rendered Output 檢視所建立的操作影片.</li>
+</ol>
 <p><strong></strong></p>
+<h2>Chatgpt座位表對答</h2>
+<p><span>chatgpt來讀取座位名單跟排列座號</span></p>
+<p><a href="https://chat.openai.com/share/5ec3a538-a557-4147-bd15-604668af054e">https://chat.openai.com/share/5ec3a538-a557-4147-bd15-604668af054e</a></p>
 <p><strong></strong></p>
 <p><strong></strong></p>
 <p><strong></strong></p>
@@ -350,6 +363,6 @@ doc["threejsblock"].bind("click", threejsblock.do)
 <p>
 <script src="https://unpkg.com/three@0.144.0/build/three.js" type="text/javascript"></script>
 </p>
-<div id="gtx-trans" style="position: absolute; left: -13px; top: 7697.54px;">
+<div id="gtx-trans" style="position: absolute; left: -8px; top: 7901.62px;">
 <div class="gtx-trans-icon"></div>
 </div>
