--- a/content/Chatgpt座位表對答.html
+++ b/content/Chatgpt座位表對答.html
@@ -2,7 +2,7 @@
         <head>
         <title>cmsite</title>
         <meta charset="utf-8">
-<meta property="head" content="H1">
+<meta property="head" content="H2">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -142,18 +142,21 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">exam-專案一 << <a href='exam-專案一.html'>Previous</a> <a href='評分項目.html'>Next</a> >> 評分項目<br /><h1>exam-專案二</h1>
-<p><span>Inventer電腦輔助設計套件零組件尺寸</span></p>
-<div>組合圖:</div>
-<p><img alt="" height="450" src="./../images/螢幕擷取畫面 2023-12-21 115558.png" width="800"/></p>
-<p>底面模板:</p>
-<p><strong><img alt="" height="450" src="./../images/螢幕擷取畫面 2023-12-21 115713.png" width="800"/></strong></p>
-<p>圓球:</p>
-<p><strong><img alt="" height="450" src="./../images/螢幕擷取畫面 2023-12-21 115745.png" width="800"/></strong></p>
-<p>軌道:</p>
-<p><strong><img alt="" height="450" src="./../images/螢幕擷取畫面 2023-12-21 115738.png" width="800"/></strong></p>
+    <div id="tipue_search_content">Wink操作影片 << <a href='Wink操作影片.html'>Previous</a> <br /><h1>Chatgpt座位表對答</h1>
+<p><span>chatgpt來讀取座位名單跟排列座號</span></p>
+<p><a href="https://chat.openai.com/share/5ec3a538-a557-4147-bd15-604668af054e">https://chat.openai.com/share/5ec3a538-a557-4147-bd15-604668af054e</a></p>
 <p><strong></strong></p>
-<br />exam-專案一 << <a href='exam-專案一.html'>Previous</a> <a href='評分項目.html'>Next</a> >> 評分項目</div>
+<p><strong></strong></p>
+<p><strong></strong></p>
+<p><strong></strong></p>
+<p><strong></strong></p>
+<p><strong></strong></p>
+<p>
+<script src="https://unpkg.com/three@0.144.0/build/three.js" type="text/javascript"></script>
+</p>
+<div id="gtx-trans" style="position: absolute; left: -8px; top: 7901.62px;">
+<div class="gtx-trans-icon"></div>
+</div><br />Wink操作影片 << <a href='Wink操作影片.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
