1/10更新網站評分項目

--- a/config/content.htm
+++ b/config/content.htm
@@ -1,6 +1,6 @@
 <h1>About</h1>
-<p><span style="color: #800000;"><strong>41123207王騰甫</strong></span></p>
-<p><span style="color: #800000;"><strong>努力在雲端、自架 server 與近端維護 Github 上的倉儲與網站內容</strong></span></p>
+<p><span style="color: #ff0000;"><strong>41123207</strong></span><strong></strong><span style="color: #ff0000; background-color: #ffffff;"><strong>王騰甫</strong></span></p>
+<p><span style="color: #ff0000;"><strong>努力在雲端、自架 server 與近端維護 Github 上的倉儲與網站內容</strong></span></p>
 <p><a href="https://github.com/mdecycu/cmsite"> https://github.com/mdecycu/cmsite </a></p>
 <p></p>
 <h1>Brython</h1>
@@ -330,8 +330,8 @@ doc["threejsblock"].bind("click", threejsblock.do)
 <p><span>I: 是否完成 W15 的平面雙 U 迴路上的<span>鋼球永動系統繪圖、轉檔與系統模擬☑️</span></span></p>
 <p><span>J: 是否使用所分配的 CAD 套件完成<span>專案二 1D 平台零組件繪圖</span>, 並提供零組件下載☑️</span></p>
 <p><span>K: 是否利用<span> </span><span>ZMQ Remote API Python</span><span> </span>對專案二轉入的零組件設定感測器, 並進行鋼球永動模擬</span></p>
-<p><span>L: 是否針對專案二的 1D 平台鋼球平衡系統所需的<span> </span><span>PID 控制理論</span>進行資料收集與 ChatGPT 對答</span></p>
-<p><strong></strong></p>
+<p><span>L: 是否針對專案二的 1D 平台鋼球平衡系統所需的<span> </span><span>PID 控制理論</span>進行資料收集與 ChatGPT 對答☑️</span></p>
+<p></p>
 <h2><strong><span>分配CAD 套件之</span><span>安裝設定</span></strong></h2>
 <p>AutoDesk 公司旗下的電腦輔助機械設計套件官方網站</p>
 <p><a href="https://www.autodesk.com/education/edu-software/overview?sorting=featured&amp;filters=individual">https://www.autodesk.com/education/edu-software/overview?sorting=featured&amp;filters=individual</a></p>
@@ -363,6 +363,3 @@ doc["threejsblock"].bind("click", threejsblock.do)
 <p>
 <script src="https://unpkg.com/three@0.144.0/build/three.js" type="text/javascript"></script>
 </p>
-<div id="gtx-trans" style="position: absolute; left: -8px; top: 7901.62px;">
-<div class="gtx-trans-icon"></div>
-</div>
