--- a/content/Chatgpt座位表對答.html
+++ b/content/Chatgpt座位表對答.html
@@ -153,10 +153,7 @@ img.add_border {
 <p><strong></strong></p>
 <p>
 <script src="https://unpkg.com/three@0.144.0/build/three.js" type="text/javascript"></script>
-</p>
-<div id="gtx-trans" style="position: absolute; left: -8px; top: 7901.62px;">
-<div class="gtx-trans-icon"></div>
-</div><br />Wink操作影片 << <a href='Wink操作影片.html'>Previous</a> </div>
+</p><br />Wink操作影片 << <a href='Wink操作影片.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
