--- a/content/index.html
+++ b/content/index.html
@@ -142,8 +142,8 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content"> <a href='Brython.html'>Next</a> >> Brython<br /><h1>About</h1>
-<p><span style="color: #800000;"><strong>41123207王騰甫</strong></span></p>
-<p><span style="color: #800000;"><strong>努力在雲端、自架 server 與近端維護 Github 上的倉儲與網站內容</strong></span></p>
+<p><span style="color: #ff0000;"><strong>41123207</strong></span><strong></strong><span style="color: #ff0000; background-color: #ffffff;"><strong>王騰甫</strong></span></p>
+<p><span style="color: #ff0000;"><strong>努力在雲端、自架 server 與近端維護 Github 上的倉儲與網站內容</strong></span></p>
 <p><a href="https://github.com/mdecycu/cmsite"> https://github.com/mdecycu/cmsite </a></p>
 <p></p>
 <br /> <a href='Brython.html'>Next</a> >> Brython</div>
