--- a/content/倉儲與網站評分項目.html
+++ b/content/倉儲與網站評分項目.html
@@ -154,8 +154,8 @@ img.add_border {
 <p><span>I: 是否完成 W15 的平面雙 U 迴路上的<span>鋼球永動系統繪圖、轉檔與系統模擬☑️</span></span></p>
 <p><span>J: 是否使用所分配的 CAD 套件完成<span>專案二 1D 平台零組件繪圖</span>, 並提供零組件下載☑️</span></p>
 <p><span>K: 是否利用<span> </span><span>ZMQ Remote API Python</span><span> </span>對專案二轉入的零組件設定感測器, 並進行鋼球永動模擬</span></p>
-<p><span>L: 是否針對專案二的 1D 平台鋼球平衡系統所需的<span> </span><span>PID 控制理論</span>進行資料收集與 ChatGPT 對答</span></p>
-<p><strong></strong></p>
+<p><span>L: 是否針對專案二的 1D 平台鋼球平衡系統所需的<span> </span><span>PID 控制理論</span>進行資料收集與 ChatGPT 對答☑️</span></p>
+<p></p>
 <br />評分項目 << <a href='評分項目.html'>Previous</a> <a href='分配CAD 套件之安裝設定.html'>Next</a> >> 分配CAD 套件之安裝設定</div>
         
     <!-- footer -->
